# telegram-bot

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
routers/: authorize.py  base.py  menu.py  reminders.py  schedule.py  settings.py  start.py
utils/: enviroment.py
utils/basic/: __init__.py  consts.py  logger.py  patterns.py  time.py
utils/filters/: is_registered.py
utils/keybords/: __init__.py  authorize.py  delete_message.py  main_menu.py
utils/services/database/: __init__.py  __main__.py
utils/services/database/handlers/: __init__.py  reminder.py  user.py
utils/services/database/models/: __init__.py  reminders.py  statistics.py  users.py
utils/services/draw/: __init__.py  tools.py
utils/services/draw/models/: design.py
utils/services/parser/: __init__.py  tools.py
utils/services/parser/models/: __init__.py  couple.py  day.py  info.py
utils/services/parser/models/enums/: __init__.py  discipline.py  hull.py
utils/services/parser/models/typed_dict/: __init__.py  day.py
utils/states/: __init__.py  add_group.py  registration.py
