[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ukit-schelude-bot"
version = "1.0.0"
authors = ["Kristaa"]
description = ""

[tool.poetry.dependencies]
pip = "^24.2"
python = "^3.12"
aiogram = "^3.13.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0"
greenlet = "^3.1.1"
pytz = "^2024.2"